[gui:playlist] make it work correctly (by opus5)